# gbsa-pipeline

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  config.toml  duties.py  environment.yml  mkdocs.yml  pyproject.toml  search.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: ci.yml  release.yml
config/: mypy.ini  pytest.ini  ruff.toml
config/vscode/: launch.json
data/: ena-top1885.sdf
data/PDB/: ligand.sdf
data/complex1/: ligand1.sdf
data/complex3/workdir/: ligand_vina_out.pdbqt
docs/: cli.md  configuration.md
docs/.overrides/partials/: comments.html
docs/reference/: api.md
outputs/docking_test/: complex3.pdbqt  complex3_vina_out.pdbqt  test1.pdbqt
pipeline_runs/protein1__ligand1/: pipeline_state.json
pipeline_runs/protein1__ligand1/docking/: ligand1_vina_out.pdbqt  protein1.pdbqt  result.json
pipeline_runs/protein1__ligand1/logs/: run_summary.txt
pipeline_runs/protein1__ligand1/md/ligand/: ligand_for_parametrization.sdf
pipeline_runs/protein1__ligand1/md/md/: result.json
pipeline_runs/protein1__ligand1/md/md/minimization/: gromacs.gro  gromacs.mdp  gromacs.out.mdp  gromacs.top
pipeline_runs/protein1__ligand1/md/parametrization/: complex.gro  complex.pickle  complex.top
pipeline_runs/protein1__ligand1/md/solvation/: solvated.gro  solvated.top
reference/api/: index.html
scripts/: custom_run.py  first_run.py  gen_credits.py  get_version.py  lig_check.py  make.py  runner.py
src/gbsa_pipeline/: __init__.py  __main__.py  bss_io.py  change_defaults.py  change_defaults_enum.py  cli.py  config.py  docking.py  equilibration.py  frcmod_parametrization.py  gbsa.py  gro_custom.py  ligand_preparation.py  md.py  md_io.py  minimization.py  parametrization.py  pipeline.py  solvation_box.py  solvation_openmm.py  unigbsa.py
src/gbsa_pipeline/_internal/: cli.py  debug.py  ligand_preparation.py
tests/: __init__.py  docking_test.py  ligand_preparation_test.py  minimization_test.py  parametrization_test.py  solvation_test.py  test_api.py  test_cli.py  test_md.py  test_unigbsa.py
tests/integration_tests/: docking_integration_test.py  frcmod_parametrization_test.py  minimization_test.py  modules_integration_test.py  solvation_integration_test.py  solvation_test.py
tests/testdata/: complex3.sdf  protein1.pdbqt
tests/testdata/docking/: dockligand.sdf  dockligand_for_docking.pdbqt  dockligand_for_docking_vina_out.pdbqt  dockligand_for_docking_vina_out_raw.sdf  dockligand_for_docking_vina_out_rebuilt.sdf  dockligand_roundtrip_raw.sdf  dockligand_roundtrip_rebuilt.sdf  dockprotein.pdbqt  protein1.pdbqt
tests/testdata/minimization/: example.top  solvated.gro  solvated.top
tests/unit_tests/: config_test.py  docking_test.py  gromacs_params_test.py  md_io_test.py  md_test.py  parametrization_test.py  user_inputs_test.py
